--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.org.springframework=debug
 logging.level.org.springframework.web=debug
 
-spring.profiles.include=aws
+spring.profiles.include=key
